# RemoteControllerAPI_Server

./: CMakeLists.txt  config.h  helper.c  helper.h  main.c  make.txt  rc_server  server  server.c  server.h
collections/: doubly_linked_list.c  doubly_linked_list.h
common/: address_helper.c  address_helper.h  allocator.c  allocator.h  array_helper.c  array_helper.h  comparer.c  comparer.h  data_handler.c  data_handler.h  fifo_queue.c  fifo_queue.h  numbers.c  numbers.h  time.c  time.h  types.h
concurrency/: runner.c  runner.h  thread.c  thread.h  threads_manager.c  threads_manager.h
concurrency/thread_pool/: task_queue.c  task_queue.h  thread_pool.c  thread_pool.h
include/: server.h
include/concurrency/: runner.h  thread.h  threads_manager.h
include/networking/: authentication.h  datagram.h  datagram_server.h  generic_server.h  passive_connection.h  passive_socket.h  server_info.h  service.h  stream_server.h
include/service_handler/: app_event.h  keyboard_input.h  mouse_input.h
networking/: authentication.c  authentication.h  datagram.c  datagram.h  datagram_server.c  datagram_server.h  generic_server.c  generic_server.h  passive_connection.c  passive_connection.h  passive_socket.c  passive_socket.h  server_info.c  server_info.h  server_loop.c  server_loop.h  service.c  service.h  stream_server.c  stream_server.h
output/apple/lib/: librc_server.dylib
outputs/debug/lib/: librc_server.dylib
outputs/lib/apple/: librc_server.dylib
rc_server.dSYM/Contents/: Info.plist
rc_server.dSYM/Contents/Resources/DWARF/: rc_server
server.dSYM/Contents/Resources/DWARF/: server
src/: main.c  server.c
src/concurrency/: runner.c  thread.c  threads_manager.c
src/networking/: authentication.c  datagram.c  datagram_server.c  generic_server.c  passive_connection.c  passive_socket.c  server_info.c  server_loop.c  service.c  stream_server.c
src/service_handler/: app_event.c  keyboard_input.c  mouse_input.c
test/: assertion.c  assertion.h  test_array_helper.c  test_array_helper.h  test_doubly_linked_list.c  test_doubly_linked_list.h  test_fifo_queue.c  test_fifo_queue.h  test_server_loop.c  test_server_loop.h  test_server_loops.c  test_server_loops.h  test_task_queue.c  test_task_queue.h  test_thread_pool.c  test_thread_pool.h  test_threads_manager.c  test_threads_manager.h  test_transfer.c  test_transfer.h  test_transfer_osx.c
