cmake_minimum_required(VERSION 3.5)
project(RemoteControllerAPI_Server)

# OS X Cocoa libraries including
find_library(CARBON_LIBRARY Carbon)
find_library(APPLICATION_SERVICES_LIBRARY ApplicationServices)
find_library(IOKIT_LIBRARY IOKit)
find_library(AUDIO_TOOLBOX_LIBRARY AudioToolbox)
find_library(IOSURFACE_LIBRARY IOSurface)
# OpenCV library including
find_package( OpenCV REQUIRED core imgproc highgui)
set(OpenCV_LIBS opencv_core opencv_imgproc opencv_highgui)

mark_as_advanced(CARBON_LIBRARY APPLICATION_SERVICES_LIBRARY IOKIT_LIBRARY AUDIO_TOOLBOX_LIBRARY)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c99")
set(SOURCE_FILES server.h server.c networking/passive_socket.h networking/passive_socket.c networking/passive_connection.h networking/passive_connection.c networking/service.h networking/service.c networking/stream_server.h networking/stream_server.c networking/generic_server.h networking/generic_server.c networking/server_loop.h networking/server_loop.c networking/datagram.h networking/datagram.c networking/datagram_server.h networking/datagram_server.c concurrency/threads_manager.h concurrency/threads_manager.c concurrency/thread.h concurrency/thread.c concurrency/runner.h concurrency/runner.c)
set(TEST_SOURCE_FILES test/test_server_loop.h test/test_server_loop.c test/test_transfer.h test/test_transfer.c)

# libraries paths
set(NETWORKING_PATH /Users/michzio/Developer/MyProjects/BachelorDegree/c/networking)
set(CONCURRENCY_PATH /Users/michzio/Developer/MyProjects/BachelorDegree/c/concurrency)
set(COMMON_FUNCTIONS_PATH /Users/michzio/Developer/MyProjects/BachelorDegree/c/common)
set(COLLECTIONS_PATH /Users/michzio/Developer/MyProjects/BachelorDegree/c/collections)
set(COMPARERS_PATH /Users/michzio/Developer/MyProjects/BachelorDegree/c/comparers)
set(UNIT_TESTS_PATH /Users/michzio/Developer/MyProjects/BachelorDegree/c/unit_tests)
# macOS libraries paths
set(AUTOMATION_SCRIPTS_PATH /Users/michzio/Developer/MyProjects/BachelorDegree/c/system/OS_X/automation_scripts)
set(COCOA_HELPER_PATH /Users/michzio/Developer/MyProjects/BachelorDegree/c/system/OS_X/cocoa_helper)
set(LIBPNG_PATH /Users/michzio/Developer/MyProjects/BachelorDegree/c/libpng-1.6.24)
set(ZLIB_PATH /Users/michzio/Developer/MyProjects/BachelorDegree/c/zlib-1.2.8)

add_library(RC_Server_Lib SHARED ${SOURCE_FILES})
set_target_properties(RC_Server_Lib PROPERTIES OUTPUT_NAME rc_server_shared)
target_link_libraries(RC_Server_Lib ${APPLICATION_SERVICES_LIBRARY})
target_link_libraries(RC_Server_Lib ${CARBON_LIBRARY})
target_link_libraries(RC_Server_Lib ${IOKIT_LIBRARY})
target_link_libraries(RC_Server_Lib ${AUDIO_TOOLBOX_LIBRARY})
target_link_libraries(RC_Server_Lib ${IOSURFACE_LIBRARY})
target_link_libraries(RC_Server_Lib ${NETWORKING_PATH}/libnetworking.a)
target_link_libraries(RC_Server_Lib ${CONCURRENCY_PATH}/libconcurrency.a)
target_link_libraries(RC_Server_Lib ${COMMON_FUNCTIONS_PATH}/libcommon_functions.a)
target_link_libraries(RC_Server_Lib ${COLLECTIONS_PATH}/libcollections.a)
target_link_libraries(RC_Server_Lib ${AUTOMATION_SCRIPTS_PATH}/libautomation_scripts.a)
target_link_libraries(RC_Server_Lib ${COCOA_HELPER_PATH}/libcocoa_helper.a)
target_link_libraries(RC_Server_Lib ${LIBPNG_PATH}/liblibpng.a)
target_link_libraries(RC_Server_Lib ${ZLIB_PATH}/libzlib.a)
target_link_libraries(RC_Server_Lib ${OpenCV_LIBS})

add_library(RC_Server_Lib_Static ${SOURCE_FILES})
set_target_properties(RC_Server_Lib_Static PROPERTIES OUTPUT_NAME rc_server)
target_link_libraries(RC_Server_Lib_Static ${APPLICATION_SERVICES_LIBRARY})
target_link_libraries(RC_Server_Lib_Static ${CARBON_LIBRARY})
target_link_libraries(RC_Server_Lib_Static ${IOKIT_LIBRARY})
target_link_libraries(RC_Server_Lib_Static ${AUDIO_TOOLBOX_LIBRARY})
target_link_libraries(RC_Server_Lib_Static ${IOSURFACE_LIBRARY})
target_link_libraries(RC_Server_Lib_Static ${NETWORKING_PATH}/libnetworking.a)
target_link_libraries(RC_Server_Lib_Static ${CONCURRENCY_PATH}/libconcurrency.a)
target_link_libraries(RC_Server_Lib_Static ${COMMON_FUNCTIONS_PATH}/libcommon_functions.a)
target_link_libraries(RC_Server_Lib_Static ${COLLECTIONS_PATH}/libcollections.a)
target_link_libraries(RC_Server_Lib_Static ${AUTOMATION_SCRIPTS_PATH}/libautomation_scripts.a)
target_link_libraries(RC_Server_Lib_Static ${COCOA_HELPER_PATH}/libcocoa_helper.a)
target_link_libraries(RC_Server_Lib_Static ${LIBPNG_PATH}/liblibpng.a)
target_link_libraries(RC_Server_Lib_Static ${ZLIB_PATH}/libzlib.a)
target_link_libraries(RC_Server_Lib_Static ${OpenCV_LIBS})


add_executable(RemoteControllerAPI_Server main.c ${TEST_SOURCE_FILES})
target_link_libraries(RemoteControllerAPI_Server RC_Server_Lib_Static)
target_link_libraries(RemoteControllerAPI_Server ${COMPARERS_PATH}/libcomparers.a)
target_link_libraries(RemoteControllerAPI_Server ${UNIT_TESTS_PATH}/libunit_tests.a)